--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.23.0",
+    "material-ui": "^0.20.0",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
@@ -34,7 +35,7 @@
     "extract-text-webpack-plugin": "^2.1.2",
     "html-webpack-plugin": "^2.29.0",
     "node-sass": "^4.5.3",
-    "resolve-url-loader": "^2.1.0",
+    "resolve-url-loader": "^2.2.1",
     "sass-loader": "^6.0.6",
     "url-loader": "^0.5.9",
     "webpack": "^3.3.0",
