--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,13 @@
     }
   },
   "rules": {
+    "flowtype/define-flow-type": "warn",
+    "flowtype/require-valid-file-annotation": "warn",
+    "flowtype/use-flow-type": "warn",
+    "flowtype/space-after-type-colon": [2, "always"],
+    "flowtype/space-before-type-colon": [2, "never"],
+    "flowtype/space-before-generic-bracket": [2, "never"],
+    "flowtype/type-id-match": [2, "((^([A-Z][a-z0-9]+)+T$)|(^Props$)|(^DefaultProps$)|(^State$))"],
     "react/jsx-filename-extension": [1, { "extensions": [".js"] }],
     "space-before-function-paren": "off",
     "comma-dangle": ["error", {
@@ -32,7 +39,8 @@
   },
   "plugins": [
     "react",
-    "babel"
+    "babel",
+    "flowtype"
   ],
   "settings": {
     "import/resolver": {
