--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
-    "babel-eslint": "^7.2.3",
+    "babel-eslint": "^8.2.2",
     "babel-loader": "^7.1.1",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-flow": "^6.23.0",
     "css-loader": "^0.28.4",
     "eslint": "^4.2.0",
     "eslint-config-airbnb-base": "^11.2.0",
