--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,8 +3,8 @@
   "env": {
     "browser": true,
     "node": true,
-    "commonjs": true,
-    "es6": true
+    "es6": true,
+    "jest": true
   },
   "globals": {
     "window": true
