--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "redux-saga-tester": "^1.0.379",
     "resolve-url-loader": "^2.2.1",
     "sass-loader": "^6.0.6",
+    "socket-io-mock": "^1.0.1",
     "url-loader": "^0.5.9",
     "webpack": "^3.3.0",
     "webpack-dev-server": "^2.5.1"
