--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "adverts-ui",
-  "version": "0.1.0-alpha",
+  "name": "chat-ui",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "index-components": "node ./scripts/indexComponents.js",
@@ -8,7 +8,8 @@
     "lint": "eslint .",
     "flow": "flow status --show-all-errors",
     "test": "jest --env=jsdom --maxWorkers=4",
-    "coverage": "npm run test -- --coverage"
+    "coverage": "npm run test -- --coverage",
+    "build": "webpack -p --config webpack.config.prod.js"
   },
   "dependencies": {
     "babel-polyfill": "^6.23.0",
